# dixit

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: rust.yml
dixit/: Cargo.toml
dixit/src/: main.rs
dixit_persist/: Cargo.toml  README.md
dixit_persist/src/: row.rs
dixit_persist/tests/: orderbook.rs  writer.rs
dixit_persist_macros/: Cargo.toml
dixit_persist_macros/src/: lib.rs  parquet.rs
local/: .env  README.md  coinbase.ipynb  coinbase.parquet  coinbase.yaml  orderbook.ipynb  orderbook.parquet  pyproject.toml
record_bin/: Cargo.toml
record_bin/src/: main.rs
record_persist/: Cargo.toml  README.md
record_persist/src/: config.rs  error.rs  lib.rs  row.rs  writer.rs
record_persist/tests/: main.rs  orderbook.rs  writer.rs
record_persist_derive/: Cargo.toml
record_persist_derive/src/: parquet.rs
recorder_bin/: Cargo.toml
recorder_bin/src/: main.rs
recorder_persist/: Cargo.toml
recorder_persist/src/: config.rs  lib.rs  row.rs
src/: config.rs  error.rs  exchange.rs  main.rs  websocket.rs
