[package]
name = "dixit"
description = "dixit binary"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dixit_persist.workspace = true
dixit_persist_macros.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
parquet.workspace = true
rust_decimal.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
