[package]
name = "dixit"
description = "dixit binary"
version = "1.0.0"
edition.workspace = true
keywords.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dixit_persist = { path = "../dixit_persist" }
dixit_persist_macros = { path = "../dixit_persist_macros" }

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
parquet.workspace = true
rust_decimal.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
