[package]
name = "dixit_persist"
description = "dixit persist library"
version = "1.0.0"
edition.workspace = true
keywords.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
dixit_persist_macros = { path = "../dixit_persist_macros" }

anyhow.workspace = true
chrono.workspace = true
compact_str.workspace = true
itertools.workspace = true
parquet.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
