[tool.poetry]
name = "local"
version = "0.1.0"
description = ""
authors = ["Francisco Lopez <flopezlasanta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
polars = "^1.7.1"
fastapi = "^0.115.0"
plotly = "^5.24.1"
jupyterlab = "^4.2.5"
pyarrow = "^17.0.0"
python-dotenv = "^1.0.1"
cryptocompare = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
