[package]
name = "record_persist_derive"
description = "persist derive macros"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
